# trans-dsl-2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
doc/: requirements.txt
doc/cpp/: decltype.rst  fp.rst  macro.rst  template-fp.rst  value-object.rst
doc/source/: appendix.rst  conf.py  conf.py.bak  contents.rst  error-handling.rst  event.rst  fragment.rst  index.rst  loop.rst  memory.rst  monitor.rst  motivation.rst  multi-thread.rst  performance.rst  proc-control.rst  quick-start.rst  stop.rst  user-friendly.rst
doc/source/_ext/: CppTransDslLexer.py
doc/source/_static/css/: custom.css
doc/source/_static/js/: custom.js
doc/source/_templates/: layout.hmtl
doc/source/cpp/: auto.rst  decltype.rst  extra.rst  rvalue-ref.rst  value-object.rst
include/cub/: cub_ns.h
include/cub/base/: AbstractClass.h  BitS.h  BitSet.h  DualRing.h  IsClass.h  Keywords.h  Placement.h  Status.h  Unclonable.h  ValueSize.h
include/cub/dci/: AggregateRoleDef.h  AggregateRoles.h  AggregateRolesInterp.h  DeclRoles.h  DeclRolesInterp.h  FwdDeclRolesDef.h  FwdDeclRolesInterp.h  ImplRoles.h  ImplRolesInterp.h  ObjectRoles.h  Role.h  RoleDef.h  RoleExporter.h
include/cub/gof/: Singleton.h
include/cub/type-list/: Flattenable.h  InfiniteIntList.h  ListSignature.h  Tuple.h  TypeList.h  TypeListAccumulator.h  TypeListComposer.h  TypeListFilter.h  TypeListFold.h  TypeListPipeLine.h  TypeListSplit.h  TypeListTakeRIght.h  TypeListTakeRight.h  TypeListTransform.h  TypeListValueWrapper.h  TypeListZip.h  ValueListSignature.h
include/cub/utils/: RepeatMacros.h
include/event/: Status.h  event_ns.h
include/event/concept/: Event.h  EventId.h  EventInfo.h
include/event/impl/: ConsecutiveEventInfo.h  SimpleEventInfo.h
include/trans-dsl/: trans-dsl.h  tsl_config.h  tsl_ns.h  tsl_status.h
include/trans-dsl/action/: DummyAsyncAction.h  EventHandlerRegistry.h  MsgHandlerTrait.h  P2MFExtractor.h  SequencedAsyncAction.h  SimpleAsyncAction.h  SingleEventAsyncAction.h  TransactionInfo.h
include/trans-dsl/porting/timer/: PlatformSpecifiedTimer.h  PlatformSpecifiedTimerInfo.h  TimeLength.h  TimerId.h
include/trans-dsl/sched/action/: ActionPath.h  MultiThreadScheduler.h  Procedure.h  SchedAnyOf.h  SchedConcurrent.h  SchedExclusive.h  SchedFork.h  SchedIgnoreEventWhen.h  SchedJoin.h  SchedLoop.h  SchedMultiThread.h  SchedMultiThreadAction.h  SchedOptional.h  SchedProcedure.h  SchedSafe.h  SchedSequential.h  SchedSwitchCase.h  SchedSyncAction.h  SchedThrow.h  SchedTimeGuard.h  SchedTimerGuard.h  SchedVoid.h  SchedWait.h  SchedWithId.h  SyncAction.h  Transaction.h
include/trans-dsl/sched/concept/: Event.h  EventId.h  FinalAction.h  InstanceId.h  RelativeTimer.h  RuntimeContext.h  RuntimeContextAutoSwitch.h  RuntimeContextInfo.h  SchedAction.h  SyncAction.h  TimerInfo.h  Transaction.h  TransactionContext.h
include/trans-dsl/sched/concepts/: ActionConcept.h  C_IsAction.h  ClassConcept.h  ConceptHelper.h  PredConcept.h  SchedActionConcept.h  SyncActionClassConcept.h
include/trans-dsl/sched/domain/: ActionId.h  MultiThreadContext.h  ObservedActionIdRegistry.h  RelativeTimer.h  RuntimeContext.h  RuntimeContextAutoSwitch.h  RuntimeContextInfo.h  SchedAction.h  ThreadBitMap.h  ThreadDoneMsg.h  ThreadId.h  TimerInfo.h  TransListenerObservedAids.h  Transaction.h  TransactionContext.h  TransactionListener.h  Unknown.h
include/trans-dsl/sched/helper/: ActionPathHelper.h  ActionRealTypeTraits.h  ActionTuple.h  AnyOfHelper.h  AsyncActionHelper.h  AutoActionHelper.h  AutoSeqHelper.h  ConcurrentHelper.h  ExclusiveHelper.h  ForkHelper.h  FragmentHelper.h  IgnoreEventWhenHelper.h  InlineSeqHelper.h  InstantSeq.h  IsSchedAction.h  JoinHelper.h  LoopCodeGen.h  LoopHelper.h  LoopPred.h  LoopPredAction.h  MaxSize.h  MaxSizeCalc.h  MultiAction.h  MultiThreadHelper.h  OptionalHelper.h  Pred.h  ProcedureHelper.h  SafeHelper.h  SchedActionWrapper.h  SeqCodeGen.h  SequenceLike.h  Sequential.h  SequentialHelper.h  SwitchCaseHelper.h  SyncActionHelper.h  ThrowHelper.h  TimeGuardHelper.h  TimerGuardHelper.h  TransactionHelper.h  TransactionListenerHelper.h  (+7 more)
include/trans-dsl/utils/: ActionStatus.h  ActionTuple.h  AssertionHelper.h  SeqInt.h  ThreadActionTrait.h  TypeListExtractor.h  TypeListSpliter.h  TypeListTransformer.h  ebo.h  integral_c.h  size_c.h  tuple_t.h  type_c.h
ptt/: dsl-test.cpp  run.sh
src/action/: EventHandlerRegistry.cpp  SequencedAsyncAction.cpp  SimpleAsyncAction.cpp  SingleEventAsyncAction.cpp
src/event/: Event.cpp
src/event/concept/: Event.cpp
src/sched/action/: MultiThreadScheduler.cpp  Procedure.cpp  SchedAnyOf.cpp  SchedConcurrent.cpp  SchedExclusive.cpp  SchedFork.cpp  SchedIgnoreEventWhen.cpp  SchedJoin.cpp  SchedLoop.cpp  SchedMultiThread.cpp  SchedMultiThreadAction.cpp  SchedOptional.cpp  SchedProcedure.cpp  SchedSafe.cpp  SchedSequential.cpp  SchedSwitchCase.cpp  SchedThrow.cpp  SchedTimeGuard.cpp  SchedTimerGuard.cpp  SchedVoid.cpp  SchedWait.cpp  SchedWithId.cpp
src/sched/concept/: RelativeTimer.cpp  RuntimeContext.cpp  Transaction.cpp
src/sched/domain/: RelativeTimer.cpp  RuntimeContext.cpp  Transaction.cpp
src/sched/porting/timer/: PlatformSpecificTimer.cpp  PlatformSpecifiedTimer.cpp  PlatformSpecifiedTimerInfo.cpp
tests/: Makefile
tests/pt/: catch.cpp  dsl-test.cpp  nanobench.cpp
tests/ut/: AllRoles.h  FragmentTest.cpp  IgnoreEventWhenTest.cpp  ProcedureTest.cpp  RoleGroup1.h  RoleGroup2.h  SimpleActionsDefs.h  StupidTransactionContext.h  TestAnyOf.cpp  TestConcurrent.cpp  TestDualRing.cpp  TestExclusive.cpp  TestFragment.cpp  TestHasRole.cpp  TestLoop.cpp  TestMultiThread.cpp  TestMultiThreadScheduler.cpp  TestOptional.cpp  TestProcedure.cpp  TestSImpleAsyncAction.cpp  TestSequentialAction.cpp  TestSimpleAsyncAction.cpp  TestSwitchCase.cpp  TestTimerGuard.cpp  TestTransaction.cpp  TransactionListenerTest.cpp  TypeListTest.cpp  WithIdTest.cpp
